On crée et utilisons ClientService

--- a/templates/back/index.html.twig
+++ b/templates/back/index.html.twig
@@ -2,14 +2,16 @@
 {% block body %}
 <div id="wrapper">
 
-    <div class="container offset-2">
-        <h1>Liste des comptes</h1>
+    <div class="container offset-2 col-md-7">
+        <h1>
+			<p style="color:aqua; display:inline-block ">Liste des </p>
+			<p style="display:inline-block; color:chartreuse; ">Comptes</p> 
+		</h1>
         
         <table class="table table-bordered">
             <thead>
                 <tr>
                     <th><button class="btn btn-primary" data-toggle="modal" data-target="#client">Compte <i class="ti-plus"></i></button></th>
-                    <th>#</th>
                     <th>Num compte</th>
                     <th colspan="3">Client</th>
                 </tr>
@@ -18,10 +20,9 @@
             <tbody>
                 {% for item in comptes %}
                 <tr>
-                    <td><a class="btn_compte btn btn-warning" href="{{path('consulterClient',{id:item.id})}}"></i> Dépot/Retrait</a></td>
-                    <td>{{item.id}}</td>
+                    <td style="width: 3px;"><a class="btn_compte btn btn-warning" href="{{path('consulterClient',{id:item.id})}}"></i> Options</a></td>
                     <td>{{item.numero}}</td>
-                    <td>
+                    <td style="width: 320px;">
                         <a class="btn_show_client btn btn-success" href="{{path('consulterClient',{id:item.id})}}"></i> Consulter</a>
 						<a class="btn_update_client btn btn-primary" href="{{path('consulterClient',{id:item.client.id})}}">Modifier</a>
 						<a class="removeOne btn btn-danger" href="{{path('deleteOneClient',{id:item.id})}}"></i> Supprimer</a>
