On crée et utilisons ClientService

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,6 +46,7 @@
 		var deleteClient= "{{path('deleteClient')}}"
 		var depotCompte= "{{path('depotCompte')}}"
 		var retraitCompte= "{{path('retraitCompte')}}"
+		var virerMontant= "{{path('virerMontant')}}"
 		var index= "{{path('comptes')}}"
 		insert(insertClient,index)
 		update(updateClient,depotCompte,retraitCompte)
