On crée le formulaire pour les transfert d'argent

--- a/templates/back/index.html.twig
+++ b/templates/back/index.html.twig
@@ -22,7 +22,7 @@
                 <tr>
                     <td style="width: 280px;">
                         <a class="btn_compte btn btn-warning" href="{{path('consulterClient',{id:item.id})}}"></i> Dépots / Retraits</a>
-                        <a class="btn_compte btn btn-dark" href="{{path('consulterClient',{id:item.id})}}"></i> Virements</a>
+                        <a class="btn_virement btn btn-dark" href="{{path('consulterClient',{id:item.id})}}"></i> Virements</a>
                     </td>
                     
                     <td>{{item.numero}}</td>
