--- a/templates/layouts/modal.html.twig
+++ b/templates/layouts/modal.html.twig
@@ -89,20 +89,20 @@
                 <div class="modal-body">
                   <form autocomplete="off" id="quickForm">
                       <div class="form-group">
-                        <label for="id_depot">Numero de Compte du débiteur</label>
-                        <input type="text" name="id_compte" class="form-control" id="id_compte" disabled>
+                        <label for="id_debit">Numero de Compte du débiteur</label>
+                        <input type="text" name="id_debit" class="form-control" id="id_debit" disabled>
                         <div class="validate"></div>
                       </div>
                       <div class="form-group">
-                        <label for="somme">Numero de compte du créditeur</label>
-                        <input type="text" name="crediteur" class="form-control" id="crediteur" placeholder="Entrer le numero de compte du créditeur" required
+                        <label for="credit">Numero de compte du créditeur</label>
+                        <input type="text" name="credit" class="form-control" id="credit" required
                           >
                         <div class="validate"></div>
                       </div>
 
                       <div class="form-group">
-                        <label for="somme">Somme</label>
-                        <input type="text" name="somme" class="form-control" id="somme" placeholder="Entrer la Somme" required
+                        <label for="somme">Montant à transferer</label>
+                        <input type="text" name="montant" class="form-control" id="montant" required
                           >
                         <div class="validate"></div>
                       </div>
@@ -115,8 +115,7 @@
                     </form> #}
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary" id="depot">Déposer</button>
-                    <button type="submit" class="btn btn-warning" id="retrait">Retirer</button>
+                    <button type="submit" class="btn btn-primary" id="virement">Transferer</button>
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Femer</button>
                   </form>
                 </div>
