On crée le formulaire pour les transfert d'argent

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,7 +49,7 @@
 		var virerMontant= "{{path('virerMontant')}}"
 		var index= "{{path('comptes')}}"
 		insert(insertClient,index)
-		update(updateClient,depotCompte,retraitCompte)
+		update(updateClient,depotCompte,retraitCompte,virerMontant)
 
 		remove(deleteClient,index)
 		showClient()
