On crée le formulaire pour les transfert d'argent

--- a/templates/compte/listeComptes.html.twig
+++ b/templates/compte/listeComptes.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 offset-1">
         <table class="table">
             <tr>
                 <th>Compte n°</th>
