--- a/templates/compte/nouveauCompte.html.twig
+++ b/templates/compte/nouveauCompte.html.twig
@@ -4,19 +4,19 @@
     <div class="col-md-5 offset-1">
         <form autocomplete="off" id="quickForm">
             <div class="form-group">
-                <label for="id_debit">Numero de Compte du débiteur</label>
-                <input type="text" name="id_debit" class="form-control" id="id_debit" disabled>
+                <label for="id_debit">Nom complet du Client</label>
+                <input type="text" name="nom" class="form-control" id="nom" disabled>
                 <div class="validate"></div>
             </div>
             <div class="form-group">
-                <label for="credit">Numero de compte du créditeur</label>
-                <input type="text" name="credit" class="form-control" id="credit" required>
+                <label for="credit">Numero de télephone</label>
+                <input type="text" name="contact" class="form-control" id="contact" required>
                 <div class="validate"></div>
             </div>
         
             <div class="form-group">
-                <label for="somme">Montant à transferer</label>
-                <input type="text" name="montant" class="form-control" id="montant" required>
+                <label for="somme">Adress / Domicile</label>
+                <input type="text" name="adresse" class="form-control" id="adresse" required>
                 <div class="validate"></div>
             </div>
         
@@ -24,7 +24,7 @@
             <div class="error-message"></div>
             <div class="message"></div>
         
-            <button type="submit" class="btn btn-primary" id="virement">Transferer</button>
+            <button type="submit" class="btn btn-primary">Créer le compte</button>
             <button type="button" class="btn btn-danger" data-dismiss="modal">Femer</button>
         </form>
 
