--- a/templates/compte/transfererMontant.html.twig
+++ b/templates/compte/transfererMontant.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="row">
     <div class="col-md-5 offset-3">
-        <form autocomplete="off" id="quickForm">
+        <form autocomplete="off" id="quickForm" action="{{path('transfererArgentB')}}">
             <div class="form-group">
                 <label for="id_debit">Numero de Compte du débiteur</label>
                 <input type="text" name="id_debit" class="form-control" id="id_debit" disabled>
@@ -24,7 +24,7 @@
             <div class="error-message"></div>
             <div class="message"></div>
         
-            <button type="submit" class="btn btn-primary" id="virement">Transferer</button>
+            <button type="submit" class="btn btn-primary" >Transferer</button>
             <button type="button" class="btn btn-danger" data-dismiss="modal">Femer</button>
         </form>
 
