On crée le formulaire pour les transfert d'argent

--- a/templates/compte/listeComptes.html.twig
+++ b/templates/compte/listeComptes.html.twig
@@ -3,6 +3,8 @@
 
 <div class="row">
     <div class="col-md-8 offset-1">
+        <br>
+        <a class=" btn btn-primary" href="{{path('crediterCompte')}}">Nouveau Compte</a>
         <table class="table">
             <tr>
                 <th>Compte n°</th>
