--- a/templates/compte/crediterCompte.html.twig
+++ b/templates/compte/crediterCompte.html.twig
@@ -5,7 +5,7 @@
         <form autocomplete="off" id="quickForm" action="{{path('crediterCompteB')}}">
             <div class="form-group">
                 <label for="id_depot">Numero de Compte</label>
-                <input type="text" name="id_compte" class="form-control" id="id_compte" disabled>
+                <input type="text" name="id_compte" class="form-control" id="id_compte">
                 <div class="validate"></div>
             </div>
             <div class="form-group">
