On crée le formulaire pour les transfert d'argent

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,10 +17,9 @@
 	{# <link href="font/themify-icons/css/themify-icons.css" rel="stylesheet"> #}
 	<link href="dist/css/sweetalert.css" rel="stylesheet">
 	<style>
-		#table th,td{
-			border: 2px gainsboro solid;
-		}
+		#table th,td{border: 2px gainsboro solid;}
 		#table{border-collapse: collapse;}
+		#form{border: 3px black solid; color: green; padding: 8px; margin-top: 5px;}
 	</style>
 	{% block stylesheets %}
 	<!--external css-->
