--- a/templates/compte/nouveauCompte.html.twig
+++ b/templates/compte/nouveauCompte.html.twig
@@ -1,8 +1,8 @@
 {% extends "base.html.twig" %}
 {% block body %}
 <div class="row">
-    <div class="col-md-5 offset-1">
-        <form autocomplete="off" id="quickForm">
+    <div class="col-md-5 offset-3">
+        <form autocomplete="off" method="post" id="form">
             <div class="form-group">
                 <label for="id_debit">Nom complet du Client</label>
                 <input type="text" name="nom" class="form-control" id="nom" disabled>
