--- a/templates/compte/crediterCompte.html.twig
+++ b/templates/compte/crediterCompte.html.twig
@@ -1,13 +1,13 @@
 {% extends "base.html.twig" %}
 {% block body %}
 <div class="row">
-    <div class="col-md-5 offset-1">
-        <form autocomplete="off" id="quickForm" action="{{path('crediterCompteB')}}">
-            <div class="form-group">
+    <div class="col-md-5 offset-3">
+        <form autocomplete="off" id="form" method="post" action="{{path('crediterCompteB')}}">
+            {# <div class="form-group">
                 <label for="id_depot">Numero de Compte</label>
                 <input type="text" name="id_compte" class="form-control" id="id_compte">
                 <div class="validate"></div>
-            </div>
+            </div> #}
             <div class="form-group">
                 <label for="somme">Entrer le montant</label>
                 <input type="text" name="montant" class="form-control" id="montant"  required>
@@ -19,7 +19,7 @@
             <div class="error-message"></div>
             <div class="message"></div>
         
-            <button type="submit" class="btn btn-primary">Créditer le compte</button>
+            <button type="submit" class="btn btn-primary offset-2">Créditer le compte</button>
             <button type="button" class="btn btn-danger" data-dismiss="modal">Femer</button>
         </form>
 
