--- a/templates/compte/transfererMontant.html.twig
+++ b/templates/compte/transfererMontant.html.twig
@@ -2,14 +2,14 @@
 {% block body %}
 <div class="row">
     <div class="col-md-5 offset-3">
-        <form autocomplete="off" id="quickForm" action="{{path('transfererArgentB')}}">
-            <div class="form-group">
+        <form autocomplete="off" id="form" method="post" action="{{path('transfererArgentB')}}">
+            {# <div class="form-group">
                 <label for="id_debit">Numero de Compte du débiteur</label>
-                <input type="text" name="id_debit" class="form-control" id="id_debit" disabled>
+                <input type="text" name="id_debit" class="form-control" id="id_debit">
                 <div class="validate"></div>
-            </div>
+            </div> #}
             <div class="form-group">
-                <label for="credit">Numero de compte du créditeur</label>
+                <label for="credit">Numero de compte du receveur</label>
                 <input type="text" name="credit" class="form-control" id="credit" required>
                 <div class="validate"></div>
             </div>
@@ -24,7 +24,7 @@
             <div class="error-message"></div>
             <div class="message"></div>
         
-            <button type="submit" class="btn btn-primary" >Transferer</button>
+            <button type="submit" class="btn btn-primary offset-2" >Transferer</button>
             <button type="button" class="btn btn-danger" data-dismiss="modal">Femer</button>
         </form>
 
