On crée le formulaire pour les transfert d'argent

--- a/templates/compte/transfererMontant.html.twig
+++ b/templates/compte/transfererMontant.html.twig
@@ -10,7 +10,7 @@
             </div> #}
             <div class="form-group">
                 <label for="credit">Numero de compte du receveur</label>
-                <input type="text" name="credit" class="form-control" id="credit" required>
+                <input type="text" name="num_compte_receveur" class="form-control" id="num_compte_receveur" required>
                 <div class="validate"></div>
             </div>
         
