On crée le formulaire pour les transfert d'argent

--- a/templates/compte/listeComptes.html.twig
+++ b/templates/compte/listeComptes.html.twig
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-md-8 offset-1">
         <br>
-        <a class=" btn btn-primary" href="{{path('crediterCompte')}}">Nouveau Compte</a>
+        <a class=" btn btn-primary" href="{{path('nouveauCompte')}}">Nouveau Compte</a>
         <br><br>
         <table class="table">
             <tr>
