--- a/templates/compte/nouveauCompte.html.twig
+++ b/templates/compte/nouveauCompte.html.twig
@@ -2,10 +2,10 @@
 {% block body %}
 <div class="row">
     <div class="col-md-5 offset-3">
-        <form autocomplete="off" method="post" id="form">
+        <form autocomplete="off" method="post" id="form" action="{{path('insertClient')}}">
             <div class="form-group">
                 <label for="id_debit">Nom complet du Client</label>
-                <input type="text" name="nom" class="form-control" id="nom" disabled>
+                <input type="text" name="nom" class="form-control" id="nom" >
                 <div class="validate"></div>
             </div>
             <div class="form-group">
