On crée la méthode pour transférer de l'argent

--- a/templates/compte/nouveauCompte.html.twig
+++ b/templates/compte/nouveauCompte.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="row">
     <div class="col-md-5 offset-3">
-        <form autocomplete="off" method="post" id="form" action="{{path('insertClient')}}">
+        <form autocomplete="off" method="post" id="form" action="{{path('nouveauCompteB')}}">
             <div class="form-group">
                 <label for="id_debit">Nom complet du Client</label>
                 <input type="text" name="nom" class="form-control" id="nom" >
