--- a/templates/layouts/navigation.html.twig
+++ b/templates/layouts/navigation.html.twig
@@ -8,7 +8,7 @@
       <ul class="navbar-nav">
 
         <li class="nav-item active">
-          <a class="nav-link menu"  href="{{path('clients')}}"> <i class="fa fa-users"> Clients</i> </i></a>
+          <a class="nav-link"  href="{{path('clients')}}"> <i class="fa fa-users"> Clients</i> </i></a>
         </li>
         
         {# <li class="nav-item active">
