gestion des cotisations: creation des entités et migrations

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,7 +46,7 @@
 		var depotCompte= "{{path('depotCompte')}}"
 		var retraitCompte= "{{path('retraitCompte')}}"
 		var virerMontant= "{{path('virerMontant')}}"
-		var index= "{{path('comptes')}}"
+		var index= "{{path('membres')}}"
 		insert(insertClient,index)
 		update(updateClient,depotCompte,retraitCompte,virerMontant)
 
