--- a/templates/layouts/navigation.html.twig
+++ b/templates/layouts/navigation.html.twig
@@ -7,9 +7,9 @@
     <div class="collapse navbar-collapse" id="navbarsExample05">
       <ul class="navbar-nav">
 
-        <li class="nav-item active">
+        {# <li class="nav-item active">
           <a class="nav-link"  href="{{path('clients')}}"> <i class="fa fa-users"> Clients</i> </i></a>
-        </li>
+        </li> #}
         
         {# <li class="nav-item active">
           <a class="nav-link" href="" id="remove"><i class="fa fa-times"></i> Supprimer tous les clients <span class="sr-only">(current)</span></a>
