--- a/templates/compte/nouveauCompte.html.twig
+++ b/templates/compte/nouveauCompte.html.twig
@@ -4,7 +4,7 @@
     <div class="col-md-5 offset-3">
         <form autocomplete="off" method="post" id="form" action="{{path('nouveauCompteB')}}">
             <div class="form-group">
-                <label for="id_debit">Nom complet du Client</label>
+                <label for="id_debit">Nom complet du Membre</label>
                 <input type="text" name="nom" class="form-control" id="nom" >
                 <div class="validate"></div>
             </div>
