--- a/templates/compte/crediterCompte.html.twig
+++ b/templates/compte/crediterCompte.html.twig
@@ -8,19 +8,22 @@
                 <input type="text" name="id_compte" class="form-control" id="id_compte">
                 <div class="validate"></div>
             </div> #}
-            <div class="form-group">
-                <label for="somme">Entrer le montant</label>
-                <input type="text" name="montant" class="form-control" id="montant"  required>
-                <div class="validate"></div>
-            </div>
-        
-        
-            <div class="loading"></div>
-            <div class="error-message"></div>
-            <div class="message"></div>
-        
+
+            {% for row in caisses %}
+                
+                <div class="form-group">
+                    <label for="somme">{{row.nom}}</label>
+                    <input type="text" name="montant" class="form-control" id="montant"  required>
+                    <div class="validate"></div>
+                </div>
+            
+                
+            {% else %}
+                
+            {% endfor %}
             <button type="submit" class="btn btn-primary offset-2">Créditer le compte</button>
             <button type="button" class="btn btn-danger" data-dismiss="modal">Femer</button>
+        
         </form>
 
     </div>
