--- a/templates/layouts/navigation.html.twig
+++ b/templates/layouts/navigation.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{{path('membres')}}"><i class="fa fa-home"></i>Comptes</a>
+    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarsExample05">
       <ul class="navbar-nav">
 
-        {# <li class="nav-item active">
-          <a class="nav-link"  href="{{path('clients')}}"> <i class="fa fa-users"> Clients</i> </i></a>
-        </li> #}
+        <li class="nav-item active">
+          <a class="nav-link"  href="{{path('caisses')}}"> <i class="fa fa-book-open"> Caisses</i> </i></a>
+        </li>
         
-        {# <li class="nav-item active">
-          <a class="nav-link" href="" id="remove"><i class="fa fa-times"></i> Supprimer tous les clients <span class="sr-only">(current)</span></a>
-        </li> #}
+        <li class="nav-item active">
+          <a class="nav-link" href="{{path('membres')}}"><i class="fa fa-users"></i>Membres</a>
+        </li>
 
         {# <li class="nav-item active">
           <a class="nav-link" href="" id="removec"><i class="ti-delete"></i> Supprimer tous les comptes <span class="sr-only">(current)</span></a>
