gestion des cotisations: creation des templates pour l'enregistrement des caisses, des membres, et des cotisation

--- a/templates/compte/crediterCompte.html.twig
+++ b/templates/compte/crediterCompte.html.twig
@@ -13,7 +13,7 @@
                 
                 <div class="form-group">
                     <label for="somme">{{row.nom}}</label>
-                    <input type="text" name="montant" class="form-control" id="montant"  required>
+                    <input type="text" name="montant{{row.id}}" class="form-control" id="montant"  required>
                     <div class="validate"></div>
                 </div>
             
