--- a/templates/layouts/navigation.html.twig
+++ b/templates/layouts/navigation.html.twig
@@ -8,12 +8,17 @@
       <ul class="navbar-nav">
 
         <li class="nav-item active">
+          <a class="nav-link" href="{{path('membres')}}"><i class="fa fa-users"></i> Membres</a>
+        </li>
+
+        <li class="nav-item active">
           <a class="nav-link"  href="{{path('caisses')}}"> <i class="fa fa-book-open"> Caisses</i> </i></a>
         </li>
-        
+
         <li class="nav-item active">
-          <a class="nav-link" href="{{path('membres')}}"><i class="fa fa-users"></i>Membres</a>
+          <a class="nav-link"  href="{{path('cotisations')}}"> <i class="fa fa-book-th"> Cotisations</i> </i></a>
         </li>
+        
 
         {# <li class="nav-item active">
           <a class="nav-link" href="" id="removec"><i class="ti-delete"></i> Supprimer tous les comptes <span class="sr-only">(current)</span></a>
