gestion des cotisations: modification des templates html

--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-md-8 offset-1">
         <br>
-        <a class=" btn btn-primary" href="{{path('nouveauCompte')}}">Nouveau Compte</a>
+        <a class=" btn btn-primary" href="{{path('nouveauCompte')}}">Nouvelle Inscription</a>
         <br><br>
         <table class="table">
             <tr>
@@ -12,7 +12,6 @@
                 <th>Nom</th>
                 <th>Contact</th>
                 <th>Adresse</th>
-                <th>Actions</th>
             </tr>
             {% for row in comptes %}
             <tr>
@@ -20,11 +19,6 @@
                 <td>{{row.membre.nom}}</td>
                 <td>{{row.membre.contact}}</td>
                 <td>{{row.membre.adresse}}</td>
-                <td style="width: 525px;">
-                    <a class=" btn btn-warning" href="{{path('crediterCompte',{id:row.id})}}">Créditer le compte</a>
-                    <a class=" btn btn-info" href="{{path('debiterCompte',{id:row.id})}}">Débiter le compte</a>
-                    <a class=" btn btn-dark" href="{{path('transfererArgent',{id:row.id})}}">Transférer de l'argent</a>
-                </td>
             </tr>
                 
             {% else %}
