--- a/templates/layouts/navigation.html.twig
+++ b/templates/layouts/navigation.html.twig
@@ -16,6 +16,18 @@
         </li>
 
         <li class="nav-item active">
+          <a class="nav-link"  href="{{path('crediterCompte')}}"> <i class="fa fa-book-open"> Dépots</i> </i></a>
+        </li>
+
+        <li class="nav-item active">
+          <a class="nav-link"  href="{{path('debiterCompte')}}"> <i class="fa fa-book-open"> Retraits</i> </i></a>
+        </li>
+
+        <li class="nav-item active">
+          <a class="nav-link"  href="{{path('transfererArgent')}}"> <i class="fa fa-book-open"> Transferts</i> </i></a>
+        </li>
+
+        <li class="nav-item active">
           <a class="nav-link"  href="{{path('cotisations')}}"> <i class="fa fa-book-th"> Cotisations</i> </i></a>
         </li>
         
