--- a/templates/compte/debiterCompte.html.twig
+++ b/templates/compte/debiterCompte.html.twig
@@ -1,7 +1,26 @@
 {% extends "base.html.twig" %}
 {% block body %}
 <div class="row">
-    <div class="col-md-5 offset-3">
+    <div class="col-md-5">
+        <table class="table">
+            <tr>
+                <th>Nom</th>
+                <th></th>
+            </tr>
+            {% for row in inscriptions %}
+            <tr>
+                <td>{{row.membre.nom}}</td>
+                <td><a class=" btn btn-info col-md-12" href="{{path('debiterCompte',{id:row.id})}}">Débiiter le compte</a></td>
+            </tr>
+                
+            {% else %}
+            <tr>
+                <td colspan="3">La lite est vide ...</td>
+            </tr> 
+            {% endfor %}
+        </table>
+    </div>
+    <div class="col-md-5">
         <form autocomplete="off" id="form" method="post" action="{{path('debiterCompteB')}}">
             {# <div class="form-group">
                 <label for="id_retrait">Numero de Compte</label>
