gestion des cotisations: modification des templates html

--- a/templates/compte/listeCotisations.html.twig
+++ b/templates/compte/listeCotisations.html.twig
@@ -21,8 +21,8 @@
                 <td>{{row.caisse.nom}}</td>
                 <td>{{row.montant}}</td>
                 <td>{{row.createdAt|date("d/m/Y")}}</td>
-                <td style="width: 525px;">
-                    <a class=" btn btn-warning" href="{{path('crediterCompte',{id:row.id})}}">Consulter</a>
+                <td>
+                    <a class=" btn btn-info col-md-12" href="{{path('crediterCompte',{id:row.id})}}">Consulter</a>
                     {# <a class=" btn btn-info" href="{{path('debiterCompte',{id:row.id})}}">Débiter le compte</a>
                     <a class=" btn btn-dark" href="{{path('transfererArgent',{id:row.id})}}">Transférer de l'argent</a> #}
                 </td>
