--- a/templates/compte/debiterCompte.html.twig
+++ b/templates/compte/debiterCompte.html.twig
@@ -22,11 +22,11 @@
     </div>
     <div class="col-md-5">
         <form autocomplete="off" id="form" method="post" action="{{path('debiterCompteB')}}">
-            {# <div class="form-group">
-                <label for="id_retrait">Numero de Compte</label>
-                <input type="text" name="id_compte" class="form-control" id="id_compte">
+            <div class="form-group">
+                <label for="id_retrait">Nom de la Caisse</label>
+                <input type="text" name="id_caisse" class="form-control" id="id_caisse">
                 <div class="validate"></div>
-            </div> #}
+            </div>
             <div class="form-group">
                 <label for="somme">Entrer le montant</label>
                 <input type="text" name="montant" class="form-control" id="montant"  required>
