gestion des cotisations: on crée les etats automatiques des membres

--- a/templates/layouts/navigation.html.twig
+++ b/templates/layouts/navigation.html.twig
@@ -12,6 +12,10 @@
         </li>
 
         <li class="nav-item active">
+          <a class="nav-link" href="{{path('comptes')}}"><i class="fa fa-book"></i> Comptes</a>
+        </li>
+
+        <li class="nav-item active">
           <a class="nav-link"  href="{{path('caisses')}}"> <i class="fa fa-book-open"> Caisses</i> </i></a>
         </li>
 
