--- a/templates/compte/debiterCompte.html.twig
+++ b/templates/compte/debiterCompte.html.twig
@@ -24,7 +24,7 @@
         <form autocomplete="off" id="form" method="post" action="{{path('debiterCompteB')}}">
             <div class="form-group">
                 <label for="id_retrait">Nom de la Caisse</label>
-                <input type="text" name="id_caisse" class="form-control" id="id_caisse">
+                <input type="text" name="nom_caisse" class="form-control" id="nom_caisse">
                 <div class="validate"></div>
             </div>
             <div class="form-group">
