gestion des cotisations: on crée le système de retrait d'argent

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,14 +12,28 @@
 	<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 	<!-- Bootstrap core CSS -->
 	<link href="dist/css/bootstrap.min.css" rel="stylesheet">
-	{# <link href="dist/css/style.css" rel="stylesheet"> #}
+	{#
+	<link href="dist/css/style.css" rel="stylesheet"> #}
 	<link href="font/fontawesome/css/all.min.css" rel="stylesheet">
-	{# <link href="font/themify-icons/css/themify-icons.css" rel="stylesheet"> #}
+	{#
+	<link href="font/themify-icons/css/themify-icons.css" rel="stylesheet"> #}
 	<link href="dist/css/sweetalert.css" rel="stylesheet">
 	<style>
-		#table th,td{border: 2px gainsboro solid;}
-		#table{border-collapse: collapse;}
-		#form{border: 3px black solid; color: green; padding: 8px; margin-top: 5px;}
+		#table th,
+		td {
+			border: 2px gainsboro solid;
+		}
+
+		#table {
+			border-collapse: collapse;
+		}
+
+		#form {
+			border: 3px black solid;
+			color: green;
+			padding: 8px;
+			margin-top: 5px;
+		}
 	</style>
 	{% block stylesheets %}
 	<!--external css-->
@@ -30,6 +44,17 @@
 
 <body>
 	{% include "layouts/navigation.html.twig" %}
+	{% for message in app.flashes('erreur') %}
+	<div class="alert alert-danger col-11 offset-1">
+		{{ message }}
+	</div>
+	{% endfor %}
+
+	{% for message in app.flashes('success') %}
+	<div class="alert alert-success col-12">
+		{{ message }}
+	</div>
+	{% endfor %}
 	{% block body %}{% endblock %}
 	{% include "layouts/modal.html.twig" %}
 	<script src="dist/js//jquery.min.js"></script>
@@ -38,19 +63,19 @@
 	{#{{ encore_entry_script_tags('app') }}#}
 	<script src="dist/js/Ajax.js"></script>
 	<script src="dist/js/navigation.js"></script>
-	
-	<script>
-		var insertClient= "{{path('insertClient')}}"
-		var updateClient= "{{path('updateClient')}}"
-		var deleteClient= "{{path('deleteClient')}}"
-		var depotCompte= "{{path('depotCompte')}}"
-		var retraitCompte= "{{path('retraitCompte')}}"
-		var virerMontant= "{{path('virerMontant')}}"
-		var index= "{{path('membres')}}"
-		insert(insertClient,index)
-		update(updateClient,depotCompte,retraitCompte,virerMontant)
 
-		remove(deleteClient,index)
+	<script>
+		var insertClient = "{{path('insertClient')}}"
+		var updateClient = "{{path('updateClient')}}"
+		var deleteClient = "{{path('deleteClient')}}"
+		var depotCompte = "{{path('depotCompte')}}"
+		var retraitCompte = "{{path('retraitCompte')}}"
+		var virerMontant = "{{path('virerMontant')}}"
+		var index = "{{path('membres')}}"
+		insert(insertClient, index)
+		update(updateClient, depotCompte, retraitCompte, virerMontant)
+
+		remove(deleteClient, index)
 		showClient()
 	</script>
 	{% block javascripts %}
