--- a/templates/compte/listeCotisations.html.twig
+++ b/templates/compte/listeCotisations.html.twig
@@ -4,8 +4,7 @@
 <div class="row">
     <div class="col-md-8 offset-1">
         <br>
-        <a class=" btn btn-primary" href="{{path('membres')}}">Nouvelle Cotisation</a>
-        <br><br>
+        <a class=" btn btn-primary" href="{{path('crediterCompte')}}">Nouvelle Cotisation</a>
         <table class="table">
             <tr>
                 <th>Membre</th>
