--- a/templates/compte/transfererMontant.html.twig
+++ b/templates/compte/transfererMontant.html.twig
@@ -4,7 +4,13 @@
     <div class="col-md-5">
         <table class="table">
             <tr>
-                <th>Nom</th>
+                <th>
+                    {% if app.session.get('id_compte_courant') %}
+                        <div class=" alert alert-primary text-center">
+                            Membre courant: {{membre.membre.nom}}
+                        </div>
+                    {% endif %}
+                </th>
                 <th></th>
             </tr>
             {% for row in inscriptions %}
@@ -22,20 +28,21 @@
     </div>
     <div class="col-md-5">
         <form autocomplete="off" id="form" method="post" action="{{path('transfererArgentB')}}">
-            {# <div class="form-group">
-                <label for="id_debit">Numero de Compte du débiteur</label>
-                <input type="text" name="id_debit" class="form-control" id="id_debit">
-                <div class="validate"></div>
-            </div> #}
             <div class="form-group">
                 <label for="credit">Numero de compte du receveur</label>
-                <input type="text" name="num_compte_receveur" class="form-control" id="num_compte_receveur" required>
+                <input type="text" name="contact" class="form-control" id="contact" required>
                 <div class="validate"></div>
             </div>
-        
+            
             <div class="form-group">
                 <label for="somme">Montant à transferer</label>
                 <input type="text" name="montant" class="form-control" id="montant" required>
+                <div class="validate"></div>
+            </div>
+
+            <div class="form-group">
+                <label for="id_debit">Nom de la caisse à créditer</label>
+                <input type="text" name="nom_caisse" class="form-control" id="nom_caisse">
                 <div class="validate"></div>
             </div>
         
